cmake_minimum_required(VERSION 3.27)
project(CS503)

set(CMAKE_CXX_STANDARD 17)

add_executable(CS503
        #        main.cpp
        #        variables.cpp
        #        input_output.cpp
        #        relational_operators.cpp
        #        logical_operators.cpp
        #        days.cpp
        #        months.cpp
        #        lectures/lec_01/first.cpp
        #        lectures/lec_01/AddingTwoIntegerNumbers.cpp
        #        lectures/lec_01/HomeWork.cpp
        #        lectures/lec_01/fahren.cpp
        #        lectures/lec_02/cont_data_types.cpp
        #        lectures/lec_02/circarea.cpp
        #        lectures/lec_02/average.cpp
        #        lectures/lec_02/arithmetic_operators.cpp
        #        lectures/lec_02/increment_decrement.cpp
        #        lectures/lec_03/int_legal_age.cpp
        #        lectures/lec_03/bool_legal_age.cpp
        #        lectures/lec_03/absolute_value.cpp
        #        lectures/lec_03/home_work_absolute_value.cpp
        #        lectures/lec_03/score_with_semantic_error.cpp
        #        lectures/lec_03/wages.cpp
        #        lectures/lec_03/homework_wages.cpp
        #        lectures/lec_03/students.cpp
        #        lectures/lec_03/question_sample_1.cpp
        #        lectures/lec_03/question_sample_2.cpp
        #        lectures/lec_04/interest_rate.cpp
        #        lectures/lec_04/grade.cpp
        #        lectures/lec_04/temperature.cpp
        #        lectures/lec_04/temperature_2.cpp
        #        lectures/lec_04/gpa.cpp
        #        lectures/lec_04/larger_number.cpp
        #        lectures/lec_04/months.cpp
        #        lectures/lec_04/equality_operator.cpp
        #        lectures/lec_04/equality_operator_2.cpp
        #        lectures/lec_04/switch_grade.cpp
        #        lectures/lec_04/break.cpp
        #        lectures/lec_04/switch_score.cpp
        #        lectures/lec_04/switch_score_enhanced.cpp
        #        lectures/lec_04/switch_score.cpp
        #        lectures/lec_04/switch_score_enhanced.cpp
        #        lectures/lec_04/age_vote.cpp
        #        labs/lab_01/name.cpp
        #        labs/lab_01/Sum.cpp
        #        labs/lab_01/circle.cpp
        #        labs/lab_01/fasting.cpp
        #        labs/lab_01/assignment_1.cpp
        #        labs/lab_02/evenOdd.cpp
        #        labs/lab_02/Vowels.cpp
        #        labs/lab_02/negPos.cpp
        #        labs/lab_02/vowelsSwitch.cpp
        #        labs/lab_02/assignment_2_1.cpp
        #        labs/lab_02/assignment2_2.cpp
        #        lectures/lec_05/example_1.cpp
        #        lectures/lec_05/wrong_initialization.cpp
        lectures/lec_05/sum_average.cpp
)